Improve anonymizer and address handling

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
   "KURUM": [
     "TÜRKİYE MİLLİ PARALİMPİK KOMİTESİ DERNEĞİ",
+    "TMPK",
     "POSTA VE TELGRAF TEŞKİLATI ANONİM ŞİRKETİ",
     "ULUSAL POSTA İDARESİ",
     "Türkiye Milli Paralimpik Komitesi Derneği",
